# mlops_zoomcamp

./: .gitignore  Dockerfile_h4  mlflow_1.ipynb  pyproject.toml
homework1/: homework1.ipynb
homework2/: backend.db  hpo.py  register_model.py  train.py
homework2/mlruns/0/: meta.yaml
homework2/mlruns/0/4f1880ead6e14cf1a7ed512b6b843621/: meta.yaml
homework2/mlruns/0/4f1880ead6e14cf1a7ed512b6b843621/metrics/: training_mean_absolute_error  training_mean_squared_error  training_r2_score  training_root_mean_squared_error  training_score
homework2/mlruns/0/4f1880ead6e14cf1a7ed512b6b843621/tags/: mlflow.log-model.history  mlflow.runName  mlflow.source.git.commit
homework4/: score.py  starter.ipynb
homework5/: baseline_model_nyc_taxi_data.ipynb  evidently_metrics_calculation.py
homework5/workspace/6c9d82fc-5967-45f1-baac-55d8deda0d17/: metadata.json
homework5/workspace/6c9d82fc-5967-45f1-baac-55d8deda0d17/snapshots/: 2fe685ca-7c88-4625-8005-811aa10ee5b5.json  782f2671-85ce-43c1-ba06-a67f8deec2b8.json
homework5/workspace/933eadb8-68fa-40ed-adad-83a94cb4fb24/: metadata.json
homework5/workspace/933eadb8-68fa-40ed-adad-83a94cb4fb24/snapshots/: fb4445b3-f5e6-4e14-af05-d7a8260f0139.json
intro/: training_ride_duration_model.ipynb
mlops/: metadata.yaml
mlops/homework_03/pipelines/homework_3_pipeline/: metadata.yaml
mlops/homework_03/transformers/: train_model.py
mlops/unit_0_setup/pipelines/example_pipeline/: metadata.yaml
mlops/unit_1_data_preparation/pipelines/data_preparation/: metadata.yaml
mlops/unit_3_observability/: metadata.yaml
(+200 files in other folders)
