[tool.poetry]
name = "mlops-zoomcamp"
version = "0.1.0"
description = ""
authors = ["RArielAlonso <rariel.alonso@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.2.2"
jupyter = "^1.0.0"
scikit-learn = "^1.4.2"
mlflow = "^2.12.2"
seaborn = "^0.13.2"
hyperopt = "^0.2.7"
xgboost = "^2.0.3"
fastparquet = "^2024.2.0"
boto3 = "^1.34.102"
evidently = "^0.4.28"
prefect = "^2.19.6"
psycopg = {extras = ["binary"], version = "^3.1.19"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
